1.08/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projectapp-svc
spec:
  type: ClusterIP
  selector:
    app: projectapp # This is the app as declared in the deployment.
  ports:
    - port: 1234 
      protocol: TCP
      targetPort: 8009 # This is the target port
